--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allOpen {
 }
 
 allprojects {
-	group = 'com.kidsworld'
+	group = 'com.cheonkyu'
 	version = '0.0.1-SNAPSHOT'
 
 	tasks.withType(JavaCompile).configureEach {
@@ -65,18 +65,15 @@ subprojects {
 		//공통사용
 		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//		implementation 'mysql:mysql-connector-java:8.0.32'
 		implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 		implementation 'org.jetbrains.kotlin:kotlin-reflect'
 		implementation 'org.projectlombok:lombok'
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//		runtimeOnly 'com.h2database:h2'
 		runtimeOnly 'com.mysql:mysql-connector-j'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
-		testImplementation 'org.springframework.kafka:spring-kafka-test'
-		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+		testImplementation 'io.kotest:kotest-runner-junit5:5.7.2'
+		testImplementation 'io.kotest:kotest-assertions-core:5.7.2'
+		testImplementation 'io.kotest:kotest-property:5.7.2'
 	}
 }
